# MonSDK

./: .gitignore  README.md  build.gradle  gradle.properties  keystore.properties.example  settings.gradle
app/: build.gradle  program-flavors.json
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
docs/: creating-new-monitoring-app.md  diabetes-status-snapshot.md  health-connect-permissions.md  infrastructure-scope.md  local-data-scope.md  mood-cycle-module-architecture-task.md  multi-program-launch-implementation-plan.md  new-app-checklist.md  no-backend-scope.md  security-compliance-scope.md  template-ai-readiness-task.md  template-readiness-review.md  ui-program-architecture-tz.md  universal-template-release-checklist.md
verification/: after-save.xml  ai_chat_bottom_gap_current.xml  ai_chat_bottom_gap_keyboard.xml  ai_chat_ime_final.xml  ai_chat_ime_final_exclude_nav.xml  ai_chat_ime_scaffold_padding_keyboard.xml  ai_chat_ime_union_insets_keyboard.xml  ai_chat_ime_union_insets_window.xml  ai_keyboard_window.xml  app.xml  fab_center_font18.xml  graph_axis_spacing_font18.xml  graph_axis_spacing_font18_pass2.xml  graph_gap_fillmax_font18.xml  graph_gap_fillmax_font18_top.xml  initial.xml  mood_record_fixed.xml  mood_record_launch.xml  mood_record_review_final.xml  mood_statistics_launch.xml  pixel8_locale_check.xml  pixel8_ru_font18_ai_typography.xml  pixel8_ru_font18_current_ai.xml  pixel8_ru_font18_current_record.xml  pixel8_ru_font18_current_stats.xml  pixel8_ru_font18_record_after.xml  pixel8_ru_font18_record_after1.xml  pixel8_ru_font18_record_before.xml  (+21 more)
(+146 files in other folders)
